--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="40dp"
         android:text="Mi app"
         android:textSize="50sp"
+        android:fontFamily="@font/fuente"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,6 +25,7 @@
         android:layout_height="wrap_content"
         android:text="Intents implícitos"
         android:textSize="30sp"
+        android:fontFamily="@font/fuente"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/miapp" />
@@ -70,6 +72,7 @@
         android:layout_marginTop="320dp"
         android:text="Intents explícitos"
         android:textSize="30sp"
+        android:fontFamily="@font/fuente"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/miapp" />
